# litscan-summarization

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  all_intro_query.sql  docker-compose-mac.yml  docker-compose-x86.yml  docker-compose.yml  first_hit_query.sql  pyproject.toml  summarize_articles.py
automatic_evaluation/: annotatorplus.py  calculate_bert_score.py  calculate_rouge.py  plots.py  pyproject.toml
chains/: summarization.py
evaluate/: Dockerfile  manage.py
evaluate/app/: __init__.py  pyproject.toml
evaluate/app/templates/: base.html  intro.html  single_summary.html
llm_abstraction/: models.py
local_llm/: pyproject.toml
local_llm/finetune/: config.yaml  fetch_prep_dataset.py
local_llm/prefilter/: abstracts.py  merge.py
reward_model/: pyproject.toml  run_pairwise_comparison.py  run_pairwise_qsort.py  train_nn_classifier.py  train_nn_pairwise.py
reward_model/feedback_data/: heuristic_mining.py
sentence_selection/: get_sentences.py  prefilter_sentences.py  pull_intro_sentences.py  pull_sentences.py  sentence_selector.py  topic_modelling.py  utils.py  with_location.py
sql/: Dockerfile  create.sql  summaries-init.sh
summarize/: Dockerfile  Dockerfile-cpu  all_intro_query.sql  all_sentences_query.sql  async_database_loader.py  first_hit_query.sql  plot_topic_modeling.py  polling_query.sql  prepare_comparison_data.py  pyproject.toml  run_sentence_selection.py  summaries.py  summarize_articles.py  summarize_articles_cli.py  summarize_articles_service.py
summarize/chains/: summarization.py
summarize/llm_abstraction/: models.py
summarize/queries/: get_sentences_per_urs.sql  hgnc.sql  mirbase.sql  mirgenedb.sql  pombase.sql  sgd.sql  snodb.sql  tair.sql
summarize/sentence_selection/: aliases.py  get_sentences.py  pull_sentences.py  sentence_selector.py  topic_modelling.py  utils.py
summarize/utils/: context.py  database.py  validation.py
utils/: context.py  database.py  googledocs.py  validation.py
visualise/: Dockerfile  docker-compose.yml  pyproject.toml  search_demo.py
