[tool.poetry]
name = "local-llm"
version = "0.1.0"
description = ""
authors = ["Andrew Green <agreen@ebi.ac.uk>"]
readme = "README.md"
packages = [{include = "local_llm"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
lmql = "^0.7.3"
langchain = "^0.1.11"
connectorx = "^0.3.2"
polars = "^0.20.13"
pyarrow = "^15.0.0"
llama-cpp-python = "^0.2.55"
tqdm = "^4.66.2"
click = "^8.1.7"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
