[tool.poetry]
name = "litscan-summarization"
version = "0.1.0"
description = ""
authors = ["Andrew Green <agreen@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.2.2"
click = "^8.1.3"
numpy = "^1.24.3"
hdbscan = "^0.8.29"
scikit-learn = "^1.2.2"
umap-learn = "^0.5.3"
langchain = "^0.0.177"
tiktoken = "^0.4.0"
google-api-python-client = "^2.86.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
pyarrow = "^12.0.0"
openai = "^0.27.7"
llama-cpp-python = "^0.1.56"
psycopg2 = "^2.9.6"
polars = "^0.18.0"
adbc-driver-postgresql = "^0.4.0"
anthropic = "^0.2.10"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
