[tool.poetry]
name = "litscan-summarization"
version = "0.1.0"
description = ""
authors = ["Andrew Green <agreen@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.2.2"
click = "^8.1.3"
numpy = "^1.24.3"
hdbscan = "0.8.33"
scikit-learn = "^1.2.2"
tiktoken = "^0.4.0"
google-api-python-client = "^2.86.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
pyarrow = "^12.0.0"
openai = "^0.27.7"
numba = "0.57.0"
umap-learn = "^0.5.3"
polars = "^0.18.0"
adbc-driver-postgresql = "^0.4.0"
anthropic = "^0.2.10"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
llama-cpp-python = "0.1.56"
psycopg2-binary = "^2.9.6"
langchain = {git = "https://github.com/langchain-ai/langchain.git", rev = "master", subdirectory = "libs/langchain"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
