[tool.poetry]
name = "litscan-prefer"
version = "0.1.0"
description = ""
authors = ["Andrew Green <agreen@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.3"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
bootstrap-flask = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
